Updated ...md (markdown)

--- a/...md.md
+++ b/...md.md
@@ -15,7 +15,14 @@ Guidelines
 To prevent any regressions in main and to enable easier review of the changes coming from win32-fork, there will be no "main" code moving or refactoring. There are multiple places where platform abstraction makes sense (auth, console to name a few), but this wont be addressed in the fork as it would lead to significant code churn. This will be done post integration once we have stable Windows supported version with significant test coverage living in main repo. Crypto support using Windows [CNG](https://msdn.microsoft.com/en-us/library/windows/desktop/aa376210(v=vs.85).aspx) has been tested out in fork but will be undone as it needed reasonable changes to "main" code. This means that the Windows supported version potentially available mid this year will rely on OpenSSL's crypto (exception is SSP for key-based authentication that will use CNG - more details later).
 
 Design details
-------
+-------------
+### Transport Layer - POSIX IO
+This layer of protocol implementation in OpenSSH consists of mainly IO, parsing and crypto code. The aim it keep this layer mostly common between Windows and Unix by implementing a POSIX IO wrapper on top of Win32 async File IO (parsing is common for both, crypto will remain common for this milestone). This wrapper strictly implements the POSIX IO needs of OpenSSH keeping the code differences in transport layer to a minimum. Note that the wrapper implements only the calls needed by OpenSSH (and not all defined in POSIX standard). Specifically, the wrapper implements
++ IO calls creating file descriptors - open, creat, socket, accept, socketpair, pipe
++ operations on a single file descriptor - fd_set, FD_* macros, read, write, recv, send, fstat, fdopen, close
++ operations on multiple file descriptors - select
++ signal semantics on these operations - ex. select (or any blocking IO call) returning EINTR
+
 
 
 
