Updated ...md (markdown)

--- a/...md.md
+++ b/...md.md
@@ -37,7 +37,7 @@ Brief design details of POSIX wrapper
 + Maintains internal buffers to accommodate an underlying fundamental difference between POSIX and Win32 IO APIs - IOReady Vs IOComplete (Ex for a Read operation, POSIX APIs signal when IO is ready - date will be subsequently, explicitly read, Win32 APIs signal when IO has completed - data is already copied to a user provided buffer. Though this may be perceived as a performance hit, a validation exercise did not show any major impact. It in fact proved beneficial in reducing kernel calls during "read"s (ex. reading a header, would fetch the entire packet in a single call). 
 + Additional details on underlying Win32 calls used
 
-| POSIX IO call  |  Underlying Win32 IO call | Additional details |
+| POSIX IO call  |  Underlying Win32 IO call(s) | Additional details |
 |:-----|:-----|:-----|
 | accept | AcceptEx | No APC semantics so, explicit event used for async IO   |
 | connect | ConnectEx | No APC semantics so, explicit event used for async IO |
@@ -45,6 +45,8 @@ Brief design details of POSIX wrapper
 | recv | WSARecv |   |
 | open | CreateFile |   |
 | pipe | CreateNamedPipe  | A uni directional named pipe with and internal name is created, CreateFile called to connect from other end  |
+| fdopen | TBD |    |
+
  
 
 
